Update branch condition

--- a/.github/workflows/wtii.yaml
+++ b/.github/workflows/wtii.yaml
@@ -2,7 +2,7 @@
 name: build and push image
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
 jobs:
   build-push-gcr:
     name: Build image
