--- a/.github/workflows/wtii.yaml
+++ b/.github/workflows/wtii.yaml
@@ -32,4 +32,22 @@ jobs:
           docker tag $IMAGE_NAME:latest europe-west4-docker.pkg.dev/$PROJECT_ID/wtii/$IMAGE_NAME:$GIT_TAG
           docker push europe-west4-docker.pkg.dev/$PROJECT_ID/wtii/$IMAGE_NAME:latest
           docker push europe-west4-docker.pkg.dev/$PROJECT_ID/wtii/$IMAGE_NAME:$GIT_TAG
+      
+  helm-deploy:
+    name: Deploy image
+    needs: build-push-gcr
+    runs-on: ubuntu-latest
+    env:
+      IMAGE_NAME: what-time-is-it
+      PROJECT_ID: bux-assignment-dpakhomov
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - uses: google-github-actions/setup-gcloud@master
+        with:
+          service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+          project_id: ${{ env.PROJECT_ID }}
+          export_default_credentials: true
+      - name: Configure Kubernetes client
+        run: gcloud container clusters get-credentials k8s
     
