--- a/.github/workflows/wtii.yaml
+++ b/.github/workflows/wtii.yaml
@@ -3,13 +3,18 @@ name: build and push image
 on:
   push:
     branches: [ master ]
+env:
+  IMAGE_NAME: what-time-is-it
+  PROJECT_ID: bux-assignment-dpakhomov
+  GITHUB_SHA: ${{ github.sha }}
+  ZONE: europe-west4
+  CLUSTER: k8s
+  REGISTRY_HOSTNAME: europe-west4-docker.pkg.dev
+  GIT_TAG: v0.1.0
 jobs:
   build-push-gcr:
     name: Build image
     runs-on: ubuntu-latest
-    env:
-      IMAGE_NAME: what-time-is-it
-      PROJECT_ID: bux-assignment-dpakhomov
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -22,24 +27,18 @@ jobs:
         run: docker build -t $IMAGE_NAME:latest .
       - name: Configure client
         run: |-
-          gcloud auth configure-docker --quiet
-          gcloud auth configure-docker europe-west4-docker.pkg.dev --quiet
+          gcloud auth configure-docker $REGISTRY_HOSTNAME --quiet
       - name: Push image
-        env:
-          GIT_TAG: v0.1.0
         run: |-
-          docker tag $IMAGE_NAME:latest europe-west4-docker.pkg.dev/$PROJECT_ID/wtii/$IMAGE_NAME:latest
-          docker tag $IMAGE_NAME:latest europe-west4-docker.pkg.dev/$PROJECT_ID/wtii/$IMAGE_NAME:$GIT_TAG
-          docker push europe-west4-docker.pkg.dev/$PROJECT_ID/wtii/$IMAGE_NAME:latest
-          docker push europe-west4-docker.pkg.dev/$PROJECT_ID/wtii/$IMAGE_NAME:$GIT_TAG
+          docker tag $IMAGE_NAME:latest $REGISTRY_HOSTNAME/$PROJECT_ID/wtii/$IMAGE_NAME:latest
+          docker tag $IMAGE_NAME:latest $REGISTRY_HOSTNAME/$PROJECT_ID/wtii/$IMAGE_NAME:$GIT_TAG
+          docker push $REGISTRY_HOSTNAME/$PROJECT_ID/wtii/$IMAGE_NAME:latest
+          docker push $REGISTRY_HOSTNAME/$PROJECT_ID/wtii/$IMAGE_NAME:$GIT_TAG
       
   helm-deploy:
     name: Deploy image
     needs: build-push-gcr
     runs-on: ubuntu-latest
-    env:
-      IMAGE_NAME: what-time-is-it
-      PROJECT_ID: bux-assignment-dpakhomov
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -48,6 +47,20 @@ jobs:
           service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
           project_id: ${{ env.PROJECT_ID }}
           export_default_credentials: true
+      - name: Install Helm
+        run: |
+          curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
       - name: Configure Kubernetes client
         run: gcloud container clusters get-credentials k8s
-    
+      - name: Deploy
+        run: |
+          gcloud container clusters get-credentials $CLUSTER \
+            --zone $ZONE \
+            --project $PROJECT_ID
+          helm upgrade $IMAGE_NAME ./chart/ \
+            --install \
+            --set ingress.annotations.cert-manager\\.io/issuer="letsencrypt-prod" \
+            --set image.repository=$REGISTRY_HOSTNAME/$PROJECT_ID/wtii/$IMAGE_NAME \
+            --set image.tag=$GIT_TAG \
+            --wait
+          kubectl get services -o wide
