--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -45,14 +45,15 @@ ingress:
   annotations:
      kubernetes.io/ingress.class: nginx
      kubernetes.io/tls-acme: "false"
+     cert-manager.io/issuer: "letsencrypt-staging"
   hosts:
-    - host: assignment.local.buxdevsecops.io
+    - host: asg14.casual-trading.com
       paths:
         - path: /
   tls:
     - secretName: what-time-is-it-tls
       hosts:
-        - assignment.local.buxdevsecops.io
+        - asg14.casual-trading.com
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
