--- a/.github/workflows/wtii.yaml
+++ b/.github/workflows/wtii.yaml
@@ -14,12 +14,14 @@ jobs:
   build-push-gcr:
     name: Build image
     runs-on: ubuntu-latest
+    outputs:
+      last-tag: ${{ steps.increment-git-tag.outputs.git-tag }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - uses: google-github-actions/setup-gcloud@master
         with:
-          service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+          service_account_key: ${{ secrets.REPO_KEY }}
           project_id: ${{ env.PROJECT_ID }}
           export_default_credentials: true
       - name: Build image
@@ -49,13 +51,15 @@ jobs:
         uses: actions/checkout@v2
       - uses: google-github-actions/setup-gcloud@master
         with:
-          service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+          service_account_key: ${{ secrets.GKE_KEY }}
           project_id: ${{ env.PROJECT_ID }}
           export_default_credentials: true
       - name: Install Helm
         run: |
           curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
       - name: Deploy
+        env:
+          GIT_TAG: ${{ needs.build-push-gcr.outputs.last-tag }}
         run: |
           gcloud container clusters get-credentials $CLUSTER \
             --zone $ZONE \
