--- a/.github/workflows/wtii.yaml
+++ b/.github/workflows/wtii.yaml
@@ -49,11 +49,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - uses: google-github-actions/setup-gcloud@master
+      - id: get-credentials
+        uses: google-github-actions/get-gke-credentials@main
         with:
-          service_account_key: ${{ secrets.GKE_KEY }}
-          project_id: ${{ env.PROJECT_ID }}
-          export_default_credentials: true
+          cluster_name: ${{ env.CLUSTER }}
+          location: ${{ env.ZONE }}
+          credentials: ${{ secrets.GKE_KEY }}
       - name: Install Helm
         run: |
           curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
