--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -2,11 +2,11 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 2
+replicaCount: 1
 
 image:
   repository: what-time-is-it
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
@@ -41,7 +41,7 @@ service:
   port: 8080
 
 ingress:
-  enabled: true
+  enabled: false
   annotations:
      kubernetes.io/ingress.class: nginx
      kubernetes.io/tls-acme: "false"
