--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: what-time-is-it
+  repository: 1561358218018/bux-assignment
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
