--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,7 +12,7 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v
+    - uses: actions/checkout@v2
     - name: Docker login
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
