--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,7 +24,7 @@ jobs:
         docker build -t $DOCKER_USER:bux-assignment:$GITHUB_RUN_NUMBER .
     - name: Docker push
       run: |
-        docker push $DOCKER_USER:bux-assignment:$GITHUB_RUN_NUMBER
+        docker push ${DOCKER_USER}:bux-assignment:$GITHUB_RUN_NUMBER
     - name: Clone infra repo
       env:
         GITOPS_TOKEN: ${{ secrets.GITOPS_TOKEN }}
