--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
         docker login -u $DOCKER_USER -p $DOCKER_PASS
     - name: Docker build
       run: |
-        docker build -t $DOCKER_USER:bux-assignment:$GITHUB_RUN_NUMBER .
+        docker build -t ${DOCKER_USER}:bux-assignment:$GITHUB_RUN_NUMBER .
     - name: Docker push
       run: |
         docker push ${DOCKER_USER}:bux-assignment:$GITHUB_RUN_NUMBER
