--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,5 +36,6 @@ jobs:
         git add -A
         git commit -m "Testing commit"
         git push --set-upstream origin buxActions-$GITHUB_RUN_NUMBER
+        git status
   
     
